updated book with arraylist authors, grade and genre. copied search while-loop to executeQuery(errors occured), commented out searchBookByTitle in BooksDb. current errors: can´t retrieve all books to the app, can´t display all attributes from book in app. Runtime Errors on the authors-attribute. Probably because it was changed from String to ArrayList