@@ -25,8 +25,11 @@ public class BooksDb implements BooksDbInterface {
 
     private final List<Book> books;
 
+
+//
     public BooksDb() {
-        books = Arrays.asList(DATA); //TODO: ska troligtvis ta bort DATA
+      //  books = Arrays.asList(DATA); //TODO: ska troligtvis ta bort DATA
+        books = List.of();
     }
 
     @Override
@@ -44,27 +47,27 @@ public class BooksDb implements BooksDbInterface {
     public void disconnect() throws BooksDbException, SQLException {
         getConnection.EndConnection();
     }
-//TODO: implementera denna sökmetod
+//TODO: sparas ifall den behövs sen.
 
 
     //Added by Anders
-    @Override
-    public List<Book> searchBooksByTitle(String searchTitle)
-            throws BooksDbException {
-        // mock implementation
-        // NB! Your implementation should select the books matching
-        // the search string via a query to a database (not load all books from db)
-        List<Book> result = new ArrayList<>();
-        searchTitle = searchTitle.toLowerCase();
-        for (Book book : books) {
-            if (book.getTitle().toLowerCase().contains(searchTitle)) {
-                result.add(book);
-            }
-        }
-        //spara i books<-SQL-fråga till databas
-      //  result.add(books);
-        return result;
-    }
+//    @Override
+//    public List<Book> searchBooksByTitle(String searchTitle)
+//            throws BooksDbException {
+//        // mock implementation
+//        // NB! Your implementation should select the books matching
+//        // the search string via a query to a database (not load all books from db)
+//        List<Book> result = new ArrayList<>();
+//        searchTitle = searchTitle.toLowerCase();
+//        for (Book book : books) {
+//            if (book.getTitle().toLowerCase().contains(searchTitle)) {
+//                result.add(book);
+//            }
+//        }
+//        //spara i books<-SQL-fråga till databas
+//      //  result.add(books);
+//        return result;
+//    }
 
 
     //TODO: kolla om vi ska ha en lista av böcker eller ett bokobjekt i taget
@@ -86,15 +89,15 @@ public class BooksDb implements BooksDbInterface {
         //TODO: add an author to the database and at the same time update the book_author table to connect the author to the books and vice versa
     }
 
-    private static final Book[] DATA = {
-            new Book(1, "123456789", "Databases Illuminated", 2018),//new Date(2018, 1, 1)),
-            new Book(2, "234567891", "Dark Databases", 1990), //new Date(1990, 1, 1)),
-            new Book(3, "456789012", "The buried giant", 2000), //new Date(2000, 1, 1)),
-            new Book(4, "567890123", "Never let me go", 2000), //new Date(2000, 1, 1)),
-            new Book(5, "678901234", "The remains of the day", 2000), //new Date(2000, 1, 1)),
-            new Book(6, "234567890", "Alias Grace", 2000), //new Date(2000, 1, 1)),
-            new Book(7, "345678911", "The handmaids tale", 2010), //new Date(2010, 1, 1)),
-            new Book(8, "345678901", "Shuggie Bain", 2020), //new Date(2020, 1, 1)),
-            new Book(9, "345678912", "Microserfs", 2000) //new Date(2000, 1, 1)),
-    };
+//    private static final Book[] DATA = {
+//            new Book(1, "123456789", "Databases Illuminated", 2018),//new Date(2018, 1, 1)),
+//            new Book(2, "234567891", "Dark Databases", 1990), //new Date(1990, 1, 1)),
+//            new Book(3, "456789012", "The buried giant", 2000), //new Date(2000, 1, 1)),
+//            new Book(4, "567890123", "Never let me go", 2000), //new Date(2000, 1, 1)),
+//            new Book(5, "678901234", "The remains of the day", 2000), //new Date(2000, 1, 1)),
+//            new Book(6, "234567890", "Alias Grace", 2000), //new Date(2000, 1, 1)),
+//            new Book(7, "345678911", "The handmaids tale", 2010), //new Date(2010, 1, 1)),
+//            new Book(8, "345678901", "Shuggie Bain", 2020), //new Date(2020, 1, 1)),
+//            new Book(9, "345678912", "Microserfs", 2000) //new Date(2000, 1, 1)),
+//    };
 }
